# cloud-agent

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.yml
.claude/: launch.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: context.py  loop.py  prompt.md  types.py
backend/app/api/: auth.py  auth_middleware.py  files.py  health.py  router.py  sessions.py
backend/app/db/: database.py  models.py
backend/app/llm/: client.py
backend/app/sandbox/: manager.py
backend/app/tools/: apply_patch.py  base.py  exec_command.py  grep_files.py  list_dir.py  read_file.py  registry.py  web_search.py  write_file.py
backend/app/ws/: handler.py  protocol.py
backend/tests/: test_e2e.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdOverlay.tsx  Markdown.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatPanel.tsx
frontend/src/components/terminal/: TerminalPanel.tsx
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx  WorkspacePage.tsx
frontend/src/stores/: authStore.ts  chatStore.ts
frontend/src/ws/: connection.ts  events.ts  useAgent.ts
sandbox/: Dockerfile  seccomp.json
