[project]
name = "cloud-agent"
version = "0.1.0"
description = "Web-based Coding Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "docker>=7.0",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
